# ffl-playoffs

./: .gitignore  .gitmodules  .pm_console_history  ARCHITECTURE.md  CLAUDE.md  README.md  docker-compose.yml  engineers.yaml  orchestrator.yaml  requirements.md  send-message.sh
.messages/: documentation-engineer-20251001-214621.txt  documentation-engineer-20251001-215015.txt  engineer-0-20251002-120301.txt  engineer-1-20251001-205618.txt  engineer-1-20251001-211919.txt  engineer-1-20251001-211950.txt  engineer-1-20251001-222500.txt  engineer-1-20251002-122610.txt  engineer-1-20251003-145807.txt  engineer-1-20251003-150713.txt  engineer-2-20251001-211740.txt  engineer-2-20251001-211744.txt  engineer-2-20251001-212041.txt  (+57 more)
nfl-data-sync/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
nfl-data-sync/scripts/: backfill_game_date.py
nfl-data-sync/src/: __init__.py  main.py
nfl-data-sync/src/api/: admin_routes.py  websocket_routes.py
nfl-data-sync/src/application/services/: fantasy_scoring_engine.py
nfl-data-sync/src/config/: settings.py
nfl-data-sync/src/domain/: __init__.py  models.py  ports.py
nfl-data-sync/src/infrastructure/adapters/: mongodb_repositories.py  nfl_data_py_adapter.py  redis_delta_service.py  websocket_service.py
nfl-data-sync/src/infrastructure/scheduler/: nfl_data_sync_job.py
nfl-data-sync/tests/: conftest.py
nfl-data-sync/tests/integration/: test_api.py  test_nfl_data_extraction.py
nfl-data-sync/tests/unit/: test_delta_detection.py  test_domain_models.py  test_fantasy_scoring.py
(+1802 files in other folders)
