[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nfl-data-sync"
version = "0.1.0"
description = "NFL Data Sync Microservice for FFL Playoffs"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "FFL Playoffs Team"}
]
dependencies = [
    "nfl-data-py>=0.3.1",
    "fastapi[all]>=0.104.0",
    "uvicorn>=0.24.0",
    "websockets>=12.0",
    "apscheduler>=3.10.4",
    "polars>=0.19.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "motor>=3.3.0",
    "pymongo>=4.6.0",
    "redis>=5.0.0",
    "python-dotenv>=1.0.0",
    "structlog>=23.2.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
